@@ -1,3 +1,5 @@
+soporte stereo en resto de drivers. De momento solo en coreaudio
+
 
 --- Cosas para la siguiente version
 
