@@ -1,5 +1,9 @@
 Version 7.1. 29 May 2018 - XXX edition
 
+Added ACB/ABC Stereo emulation
+
+Some other minor bugfixes and improvements
+
 Version 7.0. 25 May 2018 - Xeno edition
 
 Added ZX-Evolution BaseConf emulation
